--- a/app/static/submit.html
+++ b/app/static/submit.html
@@ -18,13 +18,36 @@
         </span>
         <!-- end: for account debugging only -->
     </header>
-    <h2>Submit food image</h2>
-    <form method="POST">
-        <label for="photo" id="img-input-box">Upload photo here</label>
-        <input type="file" name="photo" id="photo">
-        <button id="clear">Clear</button>
-        <input type="submit" value="Submit">
-    </form>
+
+
+    <div id="submit-cont">
+
+        <div id="caption">
+            <h2>Upload an image of a food <br> to estimate the nutrition it contains</h2>
+        </div>
+
+        <div id="submit-form">
+            <form method="POST">
+                <label for="photo" id="img-input-box">Upload photo here</label>
+                <input type="file" name="photo" id="photo">
+
+                <div id="submit-cont">
+                    <input type="submit" value="Submit" id="submit">
+                </div>
+
+                <div id="clear-cont">
+                    <button id="clear">Clear</button>
+                </div>
+            </form>
+
+        </div>
+
+    </div>
+
+
+
+
+
     <script>
         const image_src = document.getElementById('photo')
         const clear = document.getElementById('clear')
