--- a/app/static/register-succ.html
+++ b/app/static/register-succ.html
@@ -19,16 +19,16 @@
     </div>
     <form method="POST">
         <div>
-            <label for="email">Email</label>
+            <label for="email"><span>Email</span></label>
             <input type="text" name="email">
         </div>
         <div>
-            <label for="password">Password</label>
+            <label for="password"><span>Password</span></label>
             <input type="password" name="password">
         </div>
         <div>
             <input type="checkbox" name="remember">
-            <label for="remember">Remember me</label>
+            <label for="remember"><span>Remember me</span></label>
         </div>
         <input type="submit">
     </form>
